--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev:server": "ts-node-dev src/server.ts",
-    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts migrate:latest"
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:seed": "knex --knexfile knexfile.ts seed:run"
   },
   "dependencies": {
     "express": "^4.17.1",
